--- a/src/app/view/achat/achat/achat-item-search/achat-item-search.component.html
+++ b/src/app/view/achat/achat/achat-item-search/achat-item-search.component.html
@@ -27,8 +27,8 @@
                 <thead class="thead-inverse">
                     <tr>
                         <th>Produit</th>
-                        <th>Category</th>
-                        <th>Quantite Total Accorder</th>
+                        <th>Catégorie</th>
+                        <th>Quantité Total Accordé</th>
                         <th></th>
 
                     </tr>
