--- a/src/app/view/achat/achat/commande-bon-items/commande-bon-items.component.html
+++ b/src/app/view/achat/achat/commande-bon-items/commande-bon-items.component.html
@@ -13,7 +13,7 @@
                     <th>Unité</th>
                     <th>Quantite</th>
                     <th>Prix Unit (DH)</th>
-                    <th>Sous-Total (DH)</th>
+                    <th>Montant (DH)</th>
                     <th>Action</th>
                 </tr>
             </thead>
@@ -45,7 +45,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ajouter Un Commande Item</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Ajouter Une Commande Item</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -64,7 +64,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Les Besoins Accoder</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Les Besoins Accordé</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
