--- a/src/app/view/achat/achat/commande-bon/commande-bon.component.html
+++ b/src/app/view/achat/achat/commande-bon/commande-bon.component.html
@@ -14,7 +14,7 @@
                 <div class="card-body">
 
                     <div class="form-group">
-                        <label for="ref">Réfernece</label>
+                        <label for="ref">Référence</label>
                         <input class="form-control" type="text" id="ref" [(ngModel)]=achat.ref>
                     </div>
                     <div class="form-group">
