--- a/src/app/view/achat/achat/demande-prix-items/demande-prix-items.component.html
+++ b/src/app/view/achat/achat/demande-prix-items/demande-prix-items.component.html
@@ -1,6 +1,6 @@
 <div class="shadow card text-white bg-dark">
     <div class="card-header bg-dark">
-        <h4 style="display: inline;"> Demmande De Prix Items </h4>
+        <h4 style="display: inline;"> Demande De Prix Items </h4>
         <button style="float: right;" type="button" class="btn btn-primary fa fa-search mr-2" data-toggle="modal" data-target="#search"></button>
         <button style="float: right;" type="button" class="btn btn-primary fa fa-plus mr-2" data-toggle="modal" data-target="#add"></button>
     </div>
@@ -39,7 +39,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ajouter Un Commande Item</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Ajouter Une Commande Item</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -58,7 +58,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 style="color: black;" class="modal-title" id="exampleModalLabel">Les Besoins Accorder</h5>
+                    <h5 style="color: black;" class="modal-title" id="exampleModalLabel">Les Besoins Accordé</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
