--- a/src/app/view/achat/achat/demande-prix/demande-prix.component.html
+++ b/src/app/view/achat/achat/demande-prix/demande-prix.component.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
 
                     <div class="form-group">
-                        <label for="date-input">Réference</label>
+                        <label for="date-input">Référence</label>
                         <input class="form-control" type="text" id="date-input" [(ngModel)]=achat.ref>
                     </div>
                     <div class="form-group">
@@ -44,8 +44,8 @@
                     </select><br>
                     <h3>{{fourn.nom}}</h3>
                     <p><b>Email: </b>{{fourn.email}}</p>
-                    <p><b>Tel: </b>{{fourn.tel}}</p>
-                    <p><b>Address: </b>{{fourn.adress}}</p>
+                    <p><b>Tél: </b>{{fourn.tel}}</p>
+                    <p><b>Adresse: </b>{{fourn.adress}}</p>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Nouvelle Fournisseur</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Nouveau Fournisseur</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
