--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -17,7 +17,7 @@
 
             <div id="collapseeb" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white; " [routerLink]="['ebs']" class="bg-dark list-group-item list-group-item-action"><i class="fa fa-list" aria-hidden="true"></i>
-                    List Des Expression</a>
+                    Liste Des Expressions Des Besoins</a>
             </div>
 
 
@@ -29,16 +29,16 @@
             <div id="collapseachat" class="collapse bg-dark" data-parent="#accordion">
 
                 <a style="color: white;" [routerLink]="['achats']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Achats</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Achats</a>
                 <a style="color: white;" href="comptable/dp" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-plus-square" aria-hidden="true"></i> Crée Une Demande de Prix</a>
+                    <i class="fa fa-plus-square" aria-hidden="true"></i> Créer Une Demande de Prix</a>
                 <a style="color: white;" href="comptable/bc" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-plus-square" aria-hidden="true"></i> Crée Bon De Commande</a>
+                    <i class="fa fa-plus-square" aria-hidden="true"></i> Créer un Bon De Commande</a>
             </div>
 
             <!--Facturation-->
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsepai">
-                Facture<i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Factures<i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapsepai" class="collapse bg-dark" data-parent="#accordion">
@@ -62,12 +62,12 @@
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Fournisseur</a>
 
                 <a style="color: white;" [routerLink]="['fournisseurs']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Fournisseur</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Fournisseurs</a>
             </div>
 
             <!--Produits-->
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseprod">
-                Produits <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Produit <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapseprod" class="collapse bg-dark" data-parent="#accordion">
@@ -75,12 +75,12 @@
                 <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['produit']">
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Produit</a>
                 <a style="color: white;" [routerLink]="['produits']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Produit</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Produits</a>
             </div>
 
             <!--Stock-->
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsestock">
-                Stocks <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Stock <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapsestock" class="collapse bg-dark" data-parent="#accordion">
@@ -88,7 +88,7 @@
                 <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['stock']">
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Stock</a>
                 <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
-                    <i class="fa fa-list" aria-hidden="true"></i> List des Stocks</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste des Stocks</a>
             </div>
 
         </div>
