--- a/src/app/view/eb/eb-create/eb-list-current/eb-list-current.component.html
+++ b/src/app/view/eb/eb-create/eb-list-current/eb-list-current.component.html
@@ -2,14 +2,14 @@
     <div class="col-md-5">
         <div class="card shadow bg-dark text-white">
             <div class="card-header">
-                Votre Expression Des Besoin
+                Votre Expression Des Besoins
                 <button style="float: right;" (click)="onShowPersonnelEb()" type="button" class="btn btn-outline-primary"><i class="fa fa-refresh" aria-hidden="true"></i></button>
             </div>
             <div class="card-body">
                 <table class="table table-dark table-respnsive">
                     <thead class="thead-inverse">
                         <tr>
-                            <th>Title</th>
+                            <th>Titre</th>
                             <th>Département</th>
                             <th>Action</th>
                         </tr>
@@ -45,7 +45,7 @@
                         <tr>
                             <th>Produit</th>
                             <th>Q-Demander</th>
-                            <th>Desc</th>
+                            <th>Description</th>
                         </tr>
                     </thead>
                     <tbody>
