--- a/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
+++ b/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
@@ -9,7 +9,7 @@
             <thead>
                 <tr>
                     <th>Produit</th>
-                    <th>Quantite</th>
+                    <th>Quantité</th>
                     <th>Description</th>
                 </tr>
             </thead>
@@ -34,7 +34,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Nouvelle Besoin</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Nouveau Besoin</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
