--- a/src/app/view/eb/eb-edit/eb-edit.component.html
+++ b/src/app/view/eb/eb-edit/eb-edit.component.html
@@ -3,12 +3,12 @@
     <div class="card-body">
         <div class="form-group">
             <label>Titre</label>
-            <input [(ngModel)]=ebUpdate.title class="form-control" placeholder="TitreExample..." type="text">
+            <input [(ngModel)]=ebUpdate.title class="form-control" placeholder="Titre Example..." type="text">
         </div>
 
         <div class="form-group">
-            <label>Descreption</label>
-            <textarea [(ngModel)]=ebUpdate.eb_desc class="form-control" placeholder="MyDescreption..." type="text"></textarea>
+            <label>Déscription</label>
+            <textarea [(ngModel)]=ebUpdate.eb_desc class="form-control" placeholder="Description..." type="text"></textarea>
         </div>
         <label>Besoin</label>
         <table class="table table-light table-hover table-bordered">
