--- a/src/app/view/facture/facture-items/facture-items.component.html
+++ b/src/app/view/facture/facture-items/facture-items.component.html
@@ -12,7 +12,7 @@
                     <th>Unité</th>
                     <th>Quantite</th>
                     <th>Prix Unit (DH)</th>
-                    <th>Sous-Total (DH)</th>
+                    <th>Montant (DH)</th>
                 </tr>
             </thead>
             <tbody>
