--- a/src/app/view/fournisseur/fournisseur-create/fournisseur-create.component.html
+++ b/src/app/view/fournisseur/fournisseur-create/fournisseur-create.component.html
@@ -12,11 +12,11 @@
             <input [(ngModel)]=fournisseur.email type="email" name="" id="f-email" class="form-control" placeholder="example@foo.pr" aria-describedby="helpId">
         </div>
         <div class="form-group">
-            <label for="f-tel">Tel</label>
+            <label for="f-tel">Tél</label>
             <input [(ngModel)]=fournisseur.tel type="tel" name="" id="f-tel" class="form-control" placeholder="0600000032" aria-describedby="helpId">
         </div>
         <div class="form-group">
-            <label for="f-address">Address</label>
+            <label for="f-address">Adresse</label>
             <input [(ngModel)]=fournisseur.adress type="text" class="form-control" name="" id="f-address" aria-describedby="helpId" placeholder="B123 rue ...">
         </div>
 
