--- a/src/app/view/fournisseur/fournisseur-list/fournisseur-list.component.html
+++ b/src/app/view/fournisseur/fournisseur-list/fournisseur-list.component.html
@@ -1,4 +1,4 @@
-<h2>List Des Fournisseur</h2>
+<h2>Liste Des Fournisseurs</h2>
 <div class="card text-white bg-dark">
     <div class="card-header">
         <div class="input-group input-group-sm" style=" width: 260px;">
@@ -16,9 +16,9 @@
                 <tr>
                     <th>Nom</th>
                     <th>Email</th>
-                    <th>Tel</th>
-                    <th>Address</th>
-                    <th>SiteWeb</th>
+                    <th>Tél</th>
+                    <th>Adresse</th>
+                    <th>WebSite</th>
                     <th>Action</th>
                 </tr>
             </thead>
