--- a/src/app/view/stock/stock-create/stock-create.component.html
+++ b/src/app/view/stock/stock-create/stock-create.component.html
@@ -4,13 +4,13 @@
     <div class="shadow card text-white bg-dark mb-2">
 
         <div class="card-header">
-            Crée Un Stock
+            Créer Un Stock
            
         </div>
 
         <div class="card-body">
             <div class="form-group">
-                <label for="date-input">Réfernece</label>
+                <label for="date-input">Réference</label>
                 <input type="text" placeholder="entrer la ref du stock" class="form-control" [(ngModel)]=stock.ref>
             </div>
         </div>
