--- a/src/app/view/achat/achat/commande-bon-final/commande-bon-final.component.html
+++ b/src/app/view/achat/achat/commande-bon-final/commande-bon-final.component.html
@@ -12,8 +12,8 @@
     <div class="shadow card text-white bg-dark mb-3">
         <div class="card-body">
             <h3 style="float: right;">Total: {{achat.total}} DH</h3>
-            <button type="button" class="btn btn-primary fa fa-file-pdf-o ml-1"></button>
-            <button type="button" class="btn btn-primary fa fa-download ml-1"></button>
+            <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2" (click)="openPDF()"></button>
+            <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2" (click)="downloadPDF()"></button>
             <button type="button" class="btn btn-primary fa fa-envelope ml-1"></button>
         </div>
     </div>
@@ -24,12 +24,12 @@
         <div class="col-md-6">
             <div class="shadow card text-white bg-dark" style="height: 22rem">
                 <div class="card-header">
-                    Ajouter Les Information Du Demmande
+                    Ajouter Les Informations Du Demande
                 </div>
                 <div class="card-body">
 
                     <div class="form-group">
-                        <label for="ref">Réfernece</label>
+                        <label for="ref">Référenece</label>
                         <input class="form-control" type="text" id="ref" [(ngModel)]=achat.ref>
                     </div>
                     <div class="form-group">
@@ -52,7 +52,7 @@
         <div class="col-md-6">
             <div class="shadow card text-white bg-dark" style="height: 22rem">
                 <div class="card-header">
-                    Chooisir un Fournisseur
+                    Choisir un Fournisseur
                 </div>
                 <div class="card-body">
                     <label for="fournisseur">Fournisseur</label>
