--- a/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
+++ b/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div class="row mb-2">
         <div class="col-md-12">
-            <h3 style="display: inline;">Demmande De Prix <b>{{achat.ref}}</b></h3>
+            <h3 style="display: inline;">Demande De Prix <b>{{achat.ref}}</b></h3>
             <button (click)="onDemandeUpdate()" style="float: right;" type="button" class="btn btn-success">Save Changes</button>
         </div>
     </div>
     <div class="shadow card text-white bg-dark mb-3">
         <div class="card-body">
-            <button (click)="onDemandeToCommande()" style="float: right;" type="button" class="btn btn-info">Crée Bon De Commande</button>
+            <button (click)="onDemandeToCommande()" style="float: right;" type="button" class="btn btn-info">Créer Un Bon De Commande</button>
 
             <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2" (click)="openPDF()"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2" (click)="downloadPDF()"></button>
@@ -23,7 +23,7 @@
                 <div class="card-body">
 
                     <div class="form-group">
-                        <label for="date-input">Réfernece</label>
+                        <label for="date-input">Référence</label>
                         <input class="form-control" type="text" id="date-input" [(ngModel)]=achat.ref>
                     </div>
                     <div class="form-group">
@@ -57,9 +57,9 @@
                     <h3>{{achat.fournisseur.nom}}</h3>
                     <h5><i class="fa fa-telegram mr-2" aria-hidden="true"></i><b>Email:
                         </b>{{achat.fournisseur.email}}</h5>
-                    <h5><i class="fa fa-phone-square mr-2" aria-hidden="true"></i><b>Tel:
+                    <h5><i class="fa fa-phone-square mr-2" aria-hidden="true"></i><b>Tél:
                         </b>{{achat.fournisseur.tel}}</h5>
-                    <h5><i class="fa fa-address-card mr-2" aria-hidden="true"></i><b>Address:
+                    <h5><i class="fa fa-address-card mr-2" aria-hidden="true"></i><b>Adresse:
                         </b>{{achat.fournisseur.adress}}</h5>
                 </div>
             </div>
@@ -84,7 +84,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Nouvelle Fournisseur</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Nouveau Fournisseur</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
