--- a/src/app/view/dashboard/chef-dash-board/chef-dash-board.component.html
+++ b/src/app/view/dashboard/chef-dash-board/chef-dash-board.component.html
@@ -20,9 +20,9 @@
             <div id="collapseps" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white; " [routerLink]="['user']" class="bg-dark list-group-item list-group-item-action"><i class="fa fa-plus-circle"
                         aria-hidden="true"></i>
-                    Ajouter Un Prsonnel</a>
+                    Ajouter Un Personnel</a>
                 <a style="color: white; " [routerLink]="['users']" class="bg-dark list-group-item list-group-item-action"><i class="fa fa-list" aria-hidden="true"></i>
-                    List Des Prsonnel</a>
+                    Liste Des Personnels</a>
             </div>
 
             <!--Expression-->
@@ -33,7 +33,7 @@
 
             <div id="collapseeb" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white; " [routerLink]="['ebs']" class="bg-dark list-group-item list-group-item-action"><i class="fa fa-list" aria-hidden="true"></i>
-                    List Des Expression</a>
+                    Liste Des Expressions Des Besoins</a>
             </div>
 
 
@@ -47,7 +47,7 @@
             <div id="collapseachat" class="collapse bg-dark" data-parent="#accordion">
 
                 <a style="color: white;" [routerLink]="['achats']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Achats</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Achats</a>
 
             </div>
 
@@ -62,27 +62,27 @@
 
             <div id="collapsefourni" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white;" [routerLink]="['fournisseurs']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Fournisseur</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Fournisseurs</a>
             </div>
 
             <!--Produits-->
 
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseprod">
-                Produits <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Produit <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapseprod" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white;" [routerLink]="['produits']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-list" aria-hidden="true"></i> List Des Produit</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste Des Produits</a>
             </div>
             <!--Stock-->
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsestock">
-                Stocks <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Stock <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapsestock" class="collapse bg-dark" data-parent="#accordion">
                 <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
-                    <i class="fa fa-list" aria-hidden="true"></i> List des Stocks</a>
+                    <i class="fa fa-list" aria-hidden="true"></i> Liste des Stocks</a>
             </div>
 
         </div>
