--- a/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
+++ b/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
@@ -1,4 +1,4 @@
-<h2>List De Tout Les Expression Des Besoin</h2>
+<h2>Liste Des Tous Les Expressions Des Besoins</h2>
 
 <!--List-->
 <div class="card text-white bg-dark shadow mt-3 mb-3">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="dept">Filter By Dept</label>
+                        <label for="dept">Filter By Departement</label>
                         <select class="form-control" id="dept" [(ngModel)]=dept (change)="onFilterAction()">
                             <option selected></option>
                             <option *ngFor="let dept of deptList" value="{{dept.libelle}}">
@@ -52,15 +52,15 @@
     </div>
     <div class="card-body table-responsive">
         <div class="form-group">
-            <input placeholder="search by eb title..." id="key" type="text" class="form-control" [(ngModel)]=title (keyup)="onFilterAction()">
+            <input placeholder="search by eb titre..." id="key" type="text" class="form-control" [(ngModel)]=title (keyup)="onFilterAction()">
         </div>
         <table class="table table-light table-hover table-bordered">
             <thead>
                 <tr>
                     <th>Titre</th>
-                    <th>Created At</th>
+                    <th>Date de création</th>
                     <th>Personnel</th>
-                    <th>Departement</th>
+                    <th>Département</th>
                     <th>Action</th>
                 </tr>
             </thead>
@@ -112,7 +112,7 @@
                     <thead>
                         <tr>
                             <th>Produit</th>
-                            <th>Desc</th>
+                            <th>Description</th>
                             <th>Statut</th>
                             <th>Q-Demander</th>
                             <th>Q-Accorder</th>
