--- a/src/app/view/stock/stock-list/stock-list.component.html
+++ b/src/app/view/stock/stock-list/stock-list.component.html
@@ -1,4 +1,4 @@
-<h2>List Des Stocks</h2>
+<h2>Liste Des Stocks</h2>
 <div class="card text-white bg-dark shadow mt-3 mb-3">
     <div class="card-header">
         <div class="container">
@@ -23,8 +23,8 @@
         <table class="table table-light table-hover table-bordered">
             <thead>
                 <tr>
-                    <th>Ref</th>
-                    <th>QteInitial</th>
+                    <th>Reference</th>
+                    <th>Qte Initial</th>
                     <th>Date</th>
                 </tr>
             </thead>
@@ -65,7 +65,6 @@
                         <tr>
                             <th>Designation</th>
                             <th>Unite</th>
-                            <th>Quantite Alerte</th>
                             <th>Quantite Rester</th>
                         </tr>
                     </thead>
@@ -78,7 +77,6 @@
                         <tr *ngFor="let item of stockItems ">
                             <td>{{item.produit.libelle}}</td>
                             <td>{{item.produit.unite.libelle}}</td>
-                            <td>{{item.qtAlerte}}</td>
                             <td><input [min]=1 type="number" [(ngModel)]=item.qtFinal class="form-control col-xs-2"></td>
                         </tr>
                     </tbody>
