--- a/src/app/view/stock/stock/stock.component.html
+++ b/src/app/view/stock/stock/stock.component.html
@@ -14,7 +14,7 @@
 
         <div class="form-group">
             <div class="form-group">
-                <label for="cat">Produits</label>
+                <label for="cat">Produit</label>
                 <select class="form-control" id="cat" [(ngModel)]="item.produit.libelle">
                     <option *ngFor="let produit of catProduitsList" value="{{produit.libelle}}">
                         {{produit.libelle}}
