--- a/src/app/view/users/user-form/user-form.component.html
+++ b/src/app/view/users/user-form/user-form.component.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="form-group">
-                <label for="f-name">Tel:</label>
+                <label for="f-name">Tél:</label>
                 <input [(ngModel)]=user.tel #tel="ngModel" pattern="^\d{10}$" type="tel" class="form-control" aria-describedby="helpId" placeholder="065480000...">
                 <div *ngIf="tel.invalid && tel.touched" class="alert alert-danger mb-3 mt-1">
                     <span *ngIf="tel.errors.pattern">
