--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-md-3">
-                <label>Email Password (or Mot de pass d'application)*:</label>
+                <label>Email Password (or Mot de passe d'application)*:</label>
             </div>
             <div class="col-md-8">
                 <input [(ngModel)]=user.email_password #password="ngModel" required type="password" minlength="8" type="password" placeholder="my password ..." class="form-control" id="f-pass" aria-describedby="helpId">
