--- a/src/app/view/facture/facture-final/facture-final.component.html
+++ b/src/app/view/facture/facture-final/facture-final.component.html
@@ -12,7 +12,7 @@
         <div class="card-body">
             <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2" (click)="openPDF()"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2" (click)="downloadPDF()"></button>
-            <button style="float: left;" type="button" class="btn btn-primary fa fa-envelope"></button>
+            <button data-toggle="modal" data-target="#modal-mail" style="float: left;" type="button" class="btn btn-primary fa fa-envelope"></button>
         </div>
     </div>
     <!--Info-->
@@ -106,4 +106,22 @@
     <!--List-->
 
 
+</div>
+<div class="modal fade bd-example-modal-lg" id="modal-mail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Mail</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <app-email-form [fournis_email]="achat.fournisseur.email"></app-email-form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
 </div>
